fix text contrast

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -17,7 +17,7 @@ $seven-eleven-green: #357156;
 $brand-color:      $seven-eleven-red !default;
 
 $white-color:      #ffffff;
-$grey-color:       #828282 !default;
+$grey-color:       #575757 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
 
